--- a/VRChat/54/1263554.html
+++ b/VRChat/54/1263554.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "HUKqrw4w8AFPoedTpjnh927+4JOiLCPxJIRDrr5heR0="></script>
+    "FadXBJ0+tzh8VUP8PW8VeVV9PsZQe1ysvGiE6DMH0pY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Gem circle","description":"シンプルな宝石つきアクセサリです。\n首や腕、足、お好きな箇所に付けていただけます。\n\nポリゴン数790で、宝石部分と金具部分は別オブジェクトになっておりますので、Unity上でサイズの調整をしていただけます。\n\n規約は営利目的いがいであれば問題ありません。\n\n改変、二次配布お好きにどうぞ。\n\nご質問は　@Orca_is_me_VR　へ","url":"https://booth.pm/ja/items/1263554","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/f3e21dbb-3a98-47e6-aaba-233f59ae5751/i/1263554/cbfee80f-dc29-4da4-93ed-50968a3b3239_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="HUKqrw4w8AFPoedTpjnh927+4JOiLCPxJIRDrr5heR0="></script>
+    nonce="FadXBJ0+tzh8VUP8PW8VeVV9PsZQe1ysvGiE6DMH0pY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1263554/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               209
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1263554/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               209
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
