--- a/VRChat/62/1261662.html
+++ b/VRChat/62/1261662.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Uig15HGVPTQXVYi+tpU82JuY83gElIspvxfZYk8MYJU="></script>
+    "1yL8knU5GURNt+KaOJUk2tsIUe8mSEdhBcQPx6I9+/M="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【オリジナル3Dモデル】アーミリィ","description":"◇モデル名：アーミリィ\n    ・推奨環境：Unity2019.4.31f1\n    ・下記の利用規約に同意いただけた場合のみご購入をお願いいたします。\n\n\n◇解説\n    ・本アバターはDynamic Boneに対応しております。スカートや髪等を揺らしたい場合は事前にDynamic Boneを購入、インポートしてください。\n    ・VRChatやVRゲーム、バーチャルモーションキャプチャー等での個人利用、また公開、販売を前提としたゲームへの利用を想定しております。\n    ・テクスチャの編集用SAI、PSDファイルを同梱しておりますので、改変にお使いください。\n    ・サンプル用の8種類を含めた表情モーフを47種類搭載しております(リップシンク・瞬き用を除く)。\n    　組み合わせることで様々な表情を作成することが可能です。\n    ・銃とエフェクトを同梱しております。銃はブレンドシェイプでサイズ・グリップ経を調整可能です。\n\n\n◇構成\n    ・Armilly.Unitypackage\n    ・Armilly.fbx\n    ・Gun.fbx\n    ・Effets.fbx\n    ・Textures（フォルダ）\n        png形式テクスチャファイルと編集用SAI、PSDファイルを格納\n        ※テクスチャはSAI ver 1.2.5メインで作成しているため、PSD形式では実際のテクスチャと一部異なる場合がございます。\n\n\n◇利用方法\n\n1.Armilly.zipを解凍します。\n\n2.Unityの新規プロジェクトを作成し、VRCSDK、Dynamic Bone（任意）をインポートします。\n\n3.Armilly.unitypackageをインポートし、Armilly.unityをダブルクリックします。\n\n4.VRCSDKからモデルをアップロードしてください。","url":"https://booth.pm/ja/items/1261662","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/e02efdb4-98ff-483d-9401-bc413dad47a2/i/1261662/0a307dac-5da7-4a94-9252-40d735861725_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Uig15HGVPTQXVYi+tpU82JuY83gElIspvxfZYk8MYJU="></script>
+    nonce="1yL8knU5GURNt+KaOJUk2tsIUe8mSEdhBcQPx6I9+/M="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -122,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -136,7 +135,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -177,7 +177,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1261662/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               630
@@ -192,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1261662/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               630
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
