--- a/VRChat/38/1261738.html
+++ b/VRChat/38/1261738.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "hibitN4vWAOKvu3SHqUuGMZP3rZdwwne54+YjtHTZTs="></script>
+    "nXdWfoSynB59nlh2pr+RxBcE6jAqpQ5f5Y/c2lWboXY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"仕込み杖　VRChat ※無料版有り","description":"【仕込み杖】\n\n△2520\nUV展開　なし\nマテリアル　2個…金属部分とメインの黒\nシェイプキー　長さ調整用\nshader　スタンダード（metallic値をいじるといい感じ）","url":"https://booth.pm/ja/items/1261738","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/b192de80-ab9a-405c-a8c2-559c78ffe3e6/i/1261738/fa7beb21-c090-4f47-8961-e7dceeac1e5c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hibitN4vWAOKvu3SHqUuGMZP3rZdwwne54+YjtHTZTs="></script>
+    nonce="nXdWfoSynB59nlh2pr+RxBcE6jAqpQ5f5Y/c2lWboXY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1261738/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               73
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1261738/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               73
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
