--- a/VRChat/27/1261627.html
+++ b/VRChat/27/1261627.html
@@ -71,9 +71,6 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <div class="mini-player-controller" style="display: none;">
@@ -103,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ap5Emb8OPxNCmfHatkpLdUkkH3NAiPG8wOIkkxtduXs="></script>
+    "4KmWCXRlbfeY7J+zdZUweo93oYYS0XA9AzRRF0PsYJ4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル『ドラゴン』","description":"VRChat使用想定3Dモデル『ドラゴン』\n\nVRChatやUnityでの使用を想定し作成した小さなドラゴンのモデルデータです。\n営利非営利を問わずVRChatの他各種コンテンツ制作にご利用いただけます。\n\nモデル内容\n・ポリゴン数：△3,788\n・マテリアル数：1\n・テクスチャ枚数：1\n・頭、口、手足、羽ボーンあり\n・羽ばたきアニメーション同梱\n\n内容物\n・Readmeテキスト\n・unitypackageファイル\n・fbxファイル1種\n・テクスチャ2種\n・改変用PSDデータ\n\n利用について\n・編集、加工、改変可\n・商用利用可\n・クレジット表記不要\n\n禁止事項\n・素材そのままの配布、販売\n・加工したモデルデータの配布、販売\n\nその他、お気づきの点御座いましたら\n下記の連絡先までお問い合わせください。\n-------------------------------------------\n\n■制作者\nぬるもと\n\n■BOOTHページ\nhttps://nullmoto.booth.pm/\n\n■Twitter\nhttps://twitter.com/Null_moto_","url":"https://booth.pm/ja/items/1261627","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/6b6e769f-e106-4116-9c79-b5a7cd46240d/i/1261627/a7836b01-3eb4-4dfe-a0f2-8a407fc9ac35_base_resized.jpg"}
     </script>
@@ -116,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ap5Emb8OPxNCmfHatkpLdUkkH3NAiPG8wOIkkxtduXs="></script>
+    nonce="4KmWCXRlbfeY7J+zdZUweo93oYYS0XA9AzRRF0PsYJ4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -140,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -154,7 +153,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -195,7 +195,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1261627/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               67
@@ -210,14 +210,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1261627/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               67
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
