--- a/VRChat/18/1261418.html
+++ b/VRChat/18/1261418.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "F/QELvCIBHoew/FeZNAoWFtirOk5c8hwIaOCtMf6w+k="></script>
+    "jr3eLMdC3sFgwd7ySAq58Rkr7U/cwju4WAxGcKSYeoI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC向けオリジナル3Dモデル「demoncore」","description":"一歩間違えると青白い光を発するアレです\nアバターに仕込むorワールドに置く事を想定しています\n常に臨界状態にしてランプにしてもいいかもしれない\n※ライトやパーティクル等は同梱していません。モデルデータのみ\n\nデフォルトではテーブルに置いてあるタイプのサイズ感です。\n\nオリジナル3Dモデル「demoncore」紹介文及び利用規約\n\n使用者は配布モデルの利用に先立ち、当規約の内容全てに同意をした上で配布物を利用可能なものといたします。\nまた、本モデルデータをダウンロード及び購入をした時点で利用規約に同意したものとみなします。\n\n内容物：\n・demoncore.fbx\n3メッシュで構成されているモデルデータです。三角ポリゴン数：1480\n\nfbx内部データ\n・core1\n・core2　上のフタの方です。\n・driver\n\n・demoncore.prefab\nUnityのシーン上にD\u0026Dをするだけでマテリアルの設定等が完了しているモデルが配置できます。\nまた、prefab内にはspotlightが入っています。必要に応じて編集、削除等をしてください。\n\n・demoncore.mat\n\n・AlbedoTransparency.png\n・MetallicSmoothness.png\n・Normal.png\n\n・Readme.txt\n本ページに記載している文と同じtxtファイルです。\n","url":"https://booth.pm/ja/items/1261418","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/b8474108-5499-4da9-b74d-db41150399f3/i/1261418/691c22f8-d8aa-4f0b-8ec5-770419e1dd72_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="F/QELvCIBHoew/FeZNAoWFtirOk5c8hwIaOCtMf6w+k="></script>
+    nonce="jr3eLMdC3sFgwd7ySAq58Rkr7U/cwju4WAxGcKSYeoI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1261418/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               145
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1261418/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               145
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
